tests/__snapshots__/api-toBeConstructableWith-generic-classes-stderr.snap.txt
Error: Expression is constructable with the given argument.

  20 |   test("is constructable with the given argument", () => {
  21 |     expect(First).type.toBeConstructableWith(["a", "b", "c"]);
  22 |     expect(First).type.not.toBeConstructableWith(["a", "b", "c"]); // fail
     |                            ~~~~~~~~~~~~~~~~~~~~~
  23 |   });
  24 | 
  25 |   test("is not constructable without arguments", () => {

       at ./__typetests__/generic-classes.tst.ts:22:28 ❭ when target is an expression ❭ is constructable with the given argument

Error: Expression is not constructable without arguments.

Expected 1 arguments, but got 0.

  24 | 
  25 |   test("is not constructable without arguments", () => {
  26 |     expect(First).type.toBeConstructableWith();
     |                        ~~~~~~~~~~~~~~~~~~~~~
  27 |     expect(First).type.not.toBeConstructableWith(); // fail: Expected 1 arguments, but got 0.
  28 |   });
  29 | 

       at ./__typetests__/generic-classes.tst.ts:26:24 ❭ when target is an expression ❭ is not constructable without arguments

    An argument for 'a' was not provided. ts(6210)

      3 | class First<T> {
      4 |   a: T;
      5 |   constructor(a: T) {
        |               ~~~~
      6 |     this.a = a;
      7 |   }
      8 | }

          at ./__typetests__/generic-classes.tst.ts:5:15

Error: Expression is constructable with the given arguments.

  30 |   test("is constructable with the given arguments", () => {
  31 |     expect(Second).type.toBeConstructableWith(["1", "2"], (_n: string) => {});
  32 |     expect(Second).type.not.toBeConstructableWith(["1", "2"], (_n: string) => {}); // fail
     |                             ~~~~~~~~~~~~~~~~~~~~~
  33 | 
  34 |     expect(Second<number | string>).type.toBeConstructableWith(["1", 2], (_n: string | number) => {});
  35 |     expect(Second<number | string>).type.not.toBeConstructableWith(["1", 2], (_n: string | number) => {}); // fail

       at ./__typetests__/generic-classes.tst.ts:32:29 ❭ when target is an expression ❭ is constructable with the given arguments

Error: Expression is constructable with the given arguments.

  33 | 
  34 |     expect(Second<number | string>).type.toBeConstructableWith(["1", 2], (_n: string | number) => {});
  35 |     expect(Second<number | string>).type.not.toBeConstructableWith(["1", 2], (_n: string | number) => {}); // fail
     |                                              ~~~~~~~~~~~~~~~~~~~~~
  36 |   });
  37 | 
  38 |   test("is not constructable with the given arguments", () => {

       at ./__typetests__/generic-classes.tst.ts:35:46 ❭ when target is an expression ❭ is constructable with the given arguments

Error: Expression is not constructable with the given arguments.

Type 'string' is not assignable to type 'number'.

  38 |   test("is not constructable with the given arguments", () => {
  39 |     expect(Second).type.not.toBeConstructableWith(["1", "2"], (_n: number) => {});
  40 |     expect(Second).type.toBeConstructableWith(["1", "2"], (_n: number) => {}); // fail
     |                                                ~~~
  41 | 
  42 |     expect(Second).type.not.toBeConstructableWith(["1", 2], (_n: string) => {});
  43 |     expect(Second).type.toBeConstructableWith(["1", 2], (_n: string) => {}); // fail

       at ./__typetests__/generic-classes.tst.ts:40:48 ❭ when target is an expression ❭ is not constructable with the given arguments

Error: Expression is not constructable with the given arguments.

Type 'string' is not assignable to type 'number'.

  38 |   test("is not constructable with the given arguments", () => {
  39 |     expect(Second).type.not.toBeConstructableWith(["1", "2"], (_n: number) => {});
  40 |     expect(Second).type.toBeConstructableWith(["1", "2"], (_n: number) => {}); // fail
     |                                                     ~~~
  41 | 
  42 |     expect(Second).type.not.toBeConstructableWith(["1", 2], (_n: string) => {});
  43 |     expect(Second).type.toBeConstructableWith(["1", 2], (_n: string) => {}); // fail

       at ./__typetests__/generic-classes.tst.ts:40:53 ❭ when target is an expression ❭ is not constructable with the given arguments

Error: Expression is not constructable with the given arguments.

Type 'number' is not assignable to type 'string'.

  41 | 
  42 |     expect(Second).type.not.toBeConstructableWith(["1", 2], (_n: string) => {});
  43 |     expect(Second).type.toBeConstructableWith(["1", 2], (_n: string) => {}); // fail
     |                                                     ~
  44 |   });
  45 | });
  46 | 

       at ./__typetests__/generic-classes.tst.ts:43:53 ❭ when target is an expression ❭ is not constructable with the given arguments

